--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	position: absolute;
 	bottom: -10px;
 	left: 50%;
-	transition: translateX(-50%);
+	transform: translateX(-50%);
 }
 
 @media (max-width: 1710px) {
